Added a task for compiling Scss.

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -11,6 +11,8 @@ html(lang='en')
 		block title
 			title Gulp boilerplate
 
+		link( rel='stylesheet' href='style.css')
+
 	body
 		- const layoutClasses = [];
 
