Added a task for working with scripts.

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -24,3 +24,5 @@ html(lang='en')
 				block content
 			block footer
 				+footer({}, ['page-layout__footer'])
+
+		script(src='js/scripts.bundle.js')
