--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -1,7 +1,7 @@
-$breakpoints: (
-  sm: 480px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px,
-);
+.container {
+  max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: .9375rem;
+  padding-right: .9375rem;
+}
