--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,20 @@
 // Include fonts.
 @use './base/fonts';
 
-// Include blocks.
+// Include grid.
+@use './base/grid';
 
+// Include mixins.
+@use './utils/mixins' as *;
+
+// Include helpers.
+@use './utils/helpers';
+
+// Include blocks.
 @use './blocks/header';
 @use './blocks/footer';
 
 // Global styles.
-
 *,
 ::before,
 ::after {
@@ -18,6 +25,10 @@ html,
 body {
 	height: 100%;
 	min-height: 100vh;
+}
+
+html {
+  font-size: 16px;
 }
 
 body {
