--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,5 +1,7 @@
 @use 'sass:map';
-@use './grid' as *;
+@use './variables' as *;
+
+// Breakpoints.
 
 @mixin media-up($name, $breakpoints: $breakpoints) {
   $value: map.get($breakpoints, $name);
@@ -30,4 +32,18 @@
 			@content;
 		}
 	}
+}
+
+// Visually hidden.
+
+@mixin visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
 }
